--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://knzj777.github.io/travian-raid-tracker",
   "name": "raidtracker",
   "version": "0.1.0",
   "private": true,
@@ -9,10 +10,8 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "homepage": "https://knzj777.github.io/travian-raid-tracker"
-
+    "react-scripts": "^0.0.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -20,7 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
+   "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
